--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,8 +15,7 @@ nav:
           - Apresentacao 06: ''
     - Planejamento: 'Planejamento/Planejamento.md'
     - Elicitação: 'Elicitacao/'
-    - Pré-rastreabilidade:
-          - Rich Picture: 'Rich_Picture.md'
+    - Pré-rastreabilidade: 'Pre-Rastreabilidade/Rich_Picture.md'
     - Modelagem de Requisitos (Geral): 'Modelagem_Requisitos(Geral)/'
     - Modelagem de Requisitos (Ágil): 'Modelagem_Requisitos(Agil)/'
     - Análise de Requisitos: 'Analise_Requisitos/'
