--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,16 +7,17 @@ theme:
 nav:
     - Home: index.md
     - Apresentações:
-        - Apresentação 01: 'Apresentacao/Apresentacao_PC1/apresentacao1.md'
-        - Apresentacao 02: ''
-        - Apresentacao 03: ''
-        - Apresentacao 04: ''
-        - Apresentacao 05: ''
-        - Apresentacao 06: ''
+          - Apresentação 01: 'Apresentacao/Apresentacao_PC1/apresentacao1.md'
+          - Apresentacao 02: ''
+          - Apresentacao 03: ''
+          - Apresentacao 04: ''
+          - Apresentacao 05: ''
+          - Apresentacao 06: ''
     - Planejamento: 'Planejamento/Planejamento.md'
     - Pré-rastreabilidade: 'Pre-Rastreabilidade/Rich_Picture.md'
-    - Elicitação: 
-        - Introspecção: 'Elicitacao/introspeccao.md'
+    - Elicitação:
+          - Introspecção: 'Elicitacao/introspeccao.md'
+          - Questionario: 'Elicitacao/questionario.md'
     - Modelagem de Requisitos (Geral): 'Modelagem_Requisitos(Geral)/'
     - Modelagem de Requisitos (Ágil): 'Modelagem_Requisitos(Agil)/'
     - Análise de Requisitos: 'Analise_Requisitos/'
