--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
           - Storyboard: 'Elicitacao/storyboard.md'
           - Priorização:
             - First Things First: 'Elicitacao/Priorizacao/ftf.md'
+            - MoSCoW: 'Elicitacao/Priorizacao/moscow.md'
     - Modelagem de Requisitos (Geral): 'Modelagem_Requisitos(Geral)/'
     - Modelagem de Requisitos (Ágil): 'Modelagem_Requisitos(Agil)/'
     - Análise de Requisitos: 'Analise_Requisitos/'
