--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
     - Home: index.md
     - Apresentações:
           - Apresentação 01: 'Apresentacao/Apresentacao_PC1/apresentacao1.md'
-          - Apresentacao 02: ''
+          - Apresentacao 02: 'Apresentacao/apresentacao2.md'
           - Apresentacao 03: ''
           - Apresentacao 04: ''
           - Apresentacao 05: ''
