--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,7 @@ nav:
                 - First Things First: 'Elicitacao/Priorizacao/ftf.md'
                 - MoSCoW: 'Elicitacao/Priorizacao/moscow.md'
     - Modelagem de Requisitos (Geral):
-        - Especificação Suplementar: 'Modelagem(geral)/EspecificaçãoSuplementar.md'
+        - Especificação Suplementar: 'Modelagem(geral)/EspecificacaoSuplementar.md'
     - Modelagem de Requisitos (Ágil): 'Modelagem_Requisitos(Agil)/'
     - Análise de Requisitos: 'Analise_Requisitos/'
 docs_dir: docs/
