--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,13 +34,6 @@ nav:
                 - MoSCoW: 'Elicitacao/Priorizacao/moscow.md'
     - Modelagem de Requisitos:
           - Especificação Suplementar: 'Modelagem_Requisitos/EspecificacaoSuplementar.md'
-          - Casos de Uso:
-                - UC1: 'Modelagem_Requisitos/Casos_Uso/UC1.md'
-                - UC2: 'Modelagem_Requisitos/Casos_Uso/UC2.md'
-                - UC3: 'Modelagem_Requisitos/Casos_Uso/UC3.md'
-                - UC4: 'Modelagem_Requisitos/Casos_Uso/UC4.md'
-                - UC5: 'Modelagem_Requisitos/Casos_Uso/UC5.md'
-                - UC6: 'Modelagem_Requisitos/Casos_Uso/UC6.md'
-                - UC7: 'Modelagem_Requisitos/Casos_Uso/UC7.md'
+          - Casos de Uso: 'Modelagem_Requisitos/Casos_uso.md'
     - Análise de Requisitos: 'Analise_Requisitos/'
 docs_dir: docs/
