--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,10 +19,10 @@ nav:
     - Apresentações:
           - Apresentação 01: 'Apresentacao/apresentacao1.md'
           - Apresentacao 02: 'Apresentacao/apresentacao2.md'
-          - Apresentacao 03: ''
-          - Apresentacao 04: ''
-          - Apresentacao 05: ''
-          - Apresentacao 06: ''
+          #  - Apresentacao 03: ''
+          #  - Apresentacao 04: ''
+          #  - Apresentacao 05: ''
+          #  - Apresentacao 06: ''
     - Planejamento: 'Planejamento/Planejamento.md'
     - Pré-rastreabilidade: 'Pre-Rastreabilidade/Rich_Picture.md'
     - Elicitação:
