--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ nav:
     - Apresentações:
           - Apresentação 01: 'Apresentacao/apresentacao1.md'
           - Apresentacao 02: 'Apresentacao/apresentacao2.md'
-          #  - Apresentacao 03: ''
+          - Apresentacao 03: 'Apresentacao/apresentacao3.md'
           #  - Apresentacao 04: ''
           #  - Apresentacao 05: ''
           #  - Apresentacao 06: ''
