--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,8 @@ nav:
     - Home: index.md
     - Apresentações:
           - Apresentação 01: 'Apresentacao/apresentacao1.md'
-          - Apresentacao 02: 'Apresentacao/apresentacao2.md'
-          - Apresentacao 03: 'Apresentacao/apresentacao3.md'
+          - Apresentação 02: 'Apresentacao/apresentacao2.md'
+          - Apresentação 03: 'Apresentacao/apresentacao3.md'
           #  - Apresentacao 04: ''
           #  - Apresentacao 05: ''
           #  - Apresentacao 06: ''
