--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,9 @@ nav:
           - Cenários: 'Modelagem_Requisitos/Cenarios.md'
           - Especificação Suplementar: 'Modelagem_Requisitos/EspecificacaoSuplementar.md'
           - Léxicos: 'Modelagem_Requisitos/Léxicos.md'
+    - Modelagem de Requisitos - Ágil:
+          - Backlog: ''
+          - Histórias de Usuário: 'Modelagem_Requisitos/Historias_de_usario.md'
           - NFR Framework: 'Modelagem_Requisitos/NFR.md'
     - Análise de Requisitos: 'Analise_Requisitos/'
 docs_dir: docs/
