--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,5 +48,6 @@ nav:
           - Verificação:
                 - Pré-Rastreabilidade: 'Analise_Requisitos/VeriPreRastreabilidade.md'
                 - Storyboard: 'Analise_Requisitos/VeriStoryboard.md'
-            
+                - Fist Things Fist: 'Analise_Requisitos/VeriFTF.md'
+
 docs_dir: docs/
