Adição Veri Historias de Usuario

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
                 - Prototipagem: 'Analise_Requisitos/prototipagem.md'
           - Verificação:
                 - First Things First: 'Analise_Requisitos/VeriFTF.md'
+                - Histórias de Usuário: 'Analise_Requisitos/VeriHistorias.md'
                 - Introspecção: 'Analise_Requisitos/VeriIntrospeccao.md'
                 - Personas: 'Analise_Requisitos/VeriPersonas.md'
                 - Pré-Rastreabilidade: 'Analise_Requisitos/VeriPreRastreabilidade.md'
