--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,7 @@ nav:
                 - Backlog: 'Analise_Requisitos/VeriBacklog.md'
                 - Casos de Uso: 'Analise_Requisitos/VeriCasosUso.md'
                 - Cenários: ''
-                - Especificação Suplementar: ''
+                - Especificação Suplementar: 'Analise_Requisitos/VeriEspSuplementar.md'
                 - First Things First: 'Analise_Requisitos/VeriFTF.md'
                 - Histórias de Usuário: 'Analise_Requisitos/VeriHistorias.md'
                 - Introspecção: 'Analise_Requisitos/VeriIntrospeccao.md'
