--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
           - Apresentação 02: 'Apresentacao/apresentacao2.md'
           - Apresentação 03: 'Apresentacao/apresentacao3.md'
           - Apresentacao 04: 'Apresentacao/apresentacao4.md'
-          #  - Apresentacao 05: ''
+          - Apresentacao 05: 'Apresentacao/apresentacao5.md'
           #  - Apresentacao 06: ''
     - Planejamento: 'Planejamento/Planejamento.md'
     - Pré-rastreabilidade: 'Pre-Rastreabilidade/Rich_Picture.md'
